Attempt to fix star fill alignment on Firefox

--- a/play.css
+++ b/play.css
@@ -2077,6 +2077,13 @@ form .uiTheme {
   margin: 2px 2px 0 0;
 }
 
+@-moz-document url-prefix() {
+  .eventList .eventListEntry .detailsContainer .depthContainer .icon {
+    width: 14px;
+    margin: 1px 2px 0 0;
+  }
+}
+
 .eventList .eventListEntry .detailsContainer .depthFillContainer .icon path {
   filter: none;
 }
